[project]
name = "smart-voice-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pipecat-ai[cartesia,daily,deepgram,elevenlabs,google,groq,silero,ultravox]>=0.0.63",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
]
